# Three_Body_Simulation

./: .env.example  .gitignore  GEMINI.md  LICENSE  README.md  Three_Body_Simulation_fupan.md  task.md  ws_test.py
ImplementationPlan/: README.md
ImplementationPlan/additional/: references.md  tasks_list.md
ImplementationPlan/backend/: backend_plan.md  data_structures.md  integrator_choices.md  math_overview.md
ImplementationPlan/frontend/: components.md  frameworks.md  ui_overview.md  user_flow.md
backend/: README.md  pyproject.toml
backend/app/: main.py  models.py  physics.py  presets.py
backend/tests/: test_integration.py  test_physics.py
frontend/: README.md  check.cjs  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BodyInspector.tsx  CelestialBody.tsx  HiddenPanel.tsx  SimulationCanvas.tsx  SimulationControls.test.tsx  SimulationControls.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/store/: useSimulationStore.ts
prototypes/: integrator_prototype.py
scratch/: figure8_simulation.webm  lagrange_simulation.webm
skills/: README.md
