[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "scipy>=1.17.1",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
